src/objects/Clan_Game_Contribution__c.object
<CustomObject>
    <fields>
        <fullName>Clan_Game__c</fullName>
        <label>Clan Game</label>
        <referenceTo>Clan_Game__c</referenceTo>
        <relationshipLabel>Clan Games Contributions</relationshipLabel>
        <relationshipName>Clan_Games_Contributions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Player_Name__c</fullName>
        <formula>Player__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Player Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Clan Games Contributions</relationshipLabel>
        <relationshipName>Clan_Games_Contributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <formula>Total_Clan_Games_Points_at_end__c - Total_Clan_Games_Points_at_start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Clan_Games_Points_at_end__c</fullName>
        <label>Total Clan Games Points at end</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Clan_Games_Points_at_start__c</fullName>
        <label>Total Clan Games Points at start</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Clan Game Contribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Player_Name__c</columns>
        <columns>Points__c</columns>
        <columns>NAME</columns>
        <columns>Player__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CGC-{00000}</displayFormat>
        <label>Clan Game Contribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clan Games Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>